--- a/Ashrae_predict.ipynb
+++ b/Ashrae_predict.ipynb
@@ -44,7 +44,7 @@
         "\n",
         "import sklearn\n",
         "import lightgbm as lgb\n",
-        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.model_selection import GridSearchCV, train_test_split\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -357,36 +357,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hd47zUicF-kL",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 117
-        },
-        "outputId": "14c362c6-d63d-4a6a-f9ce-3ba7a402dfc3"
-      },
-      "source": [
-        "print(train.tail())"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "          building_id  meter           timestamp  meter_reading\n",
-            "20216095         1444      0 2016-12-31 23:00:00       8.750000\n",
-            "20216096         1445      0 2016-12-31 23:00:00       4.825000\n",
-            "20216097         1446      0 2016-12-31 23:00:00       0.000000\n",
-            "20216098         1447      0 2016-12-31 23:00:00     159.574997\n",
-            "20216099         1448      0 2016-12-31 23:00:00       2.850000\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "FFzpoW8ebuX8",
@@ -420,7 +390,11 @@
       "metadata": {
         "id": "XvX0H7mEb0nO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "b65b4b1c-0383-4a4d-b2f4-3a710f0f69dd"
       },
       "source": [
         "# After EDA, do feature engineering and data cleaning\n",
@@ -442,7 +416,7 @@
         "  df['is_holiday'] = (df['timestamp'].dt.date.astype(np.datetime64).isin( # timestamp should be np.datetime64 type to use isin()\n",
         "      us_holidays)).astype(np.uint8) \n",
         "  # Add weekend days: Saturday, Sunday as is_holiday\n",
-        "  df.loc[(df['week'] == 5) | (df['week'] == 6), 'is_holiday'] = 1\n",
+        "  df.loc[df['weekday'] == 5 | df['weekday'] == 6, 'is_holiday'] = 1\n",
         "  return df\n",
         "\n",
         "# Data Preprocessing\n",
@@ -489,7 +463,7 @@
         "    \n",
         "    # Data Cleaning: drop useless features\n",
         "    X.drop(['timestamp', 'sea_level_pressure', 'wind_direction', 'wind_speed'], axis = 1, inplace = True)\n",
-        "    \n",
+        "\n",
         "    \n",
         "    # Return clean data: X & y\n",
         "    if not test:\n",
@@ -504,6 +478,38 @@
         "## Q1: Should I do log transformation?\n",
         "## Q3: There are still columns contains multiple missing values\n",
         "\n"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DatetimeIndex(['2016-01-01', '2016-01-18', '2016-02-15', '2016-05-30',\n",
+            "               '2016-07-04', '2016-09-05', '2016-10-10', '2016-11-11',\n",
+            "               '2016-11-24', '2016-12-26', '2017-01-02', '2017-01-16',\n",
+            "               '2017-02-20', '2017-05-29', '2017-07-04', '2017-09-04',\n",
+            "               '2017-10-09', '2017-11-10', '2017-11-23', '2017-12-25',\n",
+            "               '2018-01-01', '2018-01-15', '2018-02-19', '2018-05-28',\n",
+            "               '2018-07-04', '2018-09-03', '2018-10-08', '2018-11-12',\n",
+            "               '2018-11-22', '2018-12-25'],\n",
+            "              dtype='datetime64[ns]', freq=None)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dzZs2yb-PenO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create training data\n",
+        "#x_data, y_data = preprocessing(train, building, weather_train, False)\n",
+        "#del train, weather_train\n",
+        "x_train, x_valid, y_train, y_valid = train_test_split(x_data, y_data, test_size = 0.3)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -523,12 +529,6 @@
         "# Stacking ensemble model\n",
         "from sklearn.linear_model import RidgeCV\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
-        "\n",
-        "# Create training data\n",
-        "x_data, y_data = preprocessing(train, building, weather_train, False)\n",
-        "del train, weather_train\n",
-        "\n",
-        "x_train, y_train, x_valid, y_valid = train_test_split(x_data, y_data, test_size = 0.3)\n",
         "\n",
         "def stack_model():\n",
         "  \n",
@@ -574,13 +574,17 @@
       "metadata": {
         "id": "OTU5HTp_O2GL",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 538
+        },
+        "outputId": "da00240b-7d92-4d7f-dd5c-42a3b806f16b"
       },
       "source": [
         "# LGBM ensemble\n",
         "# Use GridsearchCV to search best parameters\n",
         "from sklearn.model_selection import GridSearchCV\n",
-        "from ligthgbm import LGBMRegressor\n",
+        "from lightgbm import LGBMRegressor\n",
         "\n",
         "# Search on subset first!?\n",
         "# param grid to search for best parameters\n",
@@ -589,20 +593,69 @@
         "    'max_depth':[5, 10, 20]\n",
         "}\n",
         "\n",
-        "lgb = LGBMRegressor('boosting_type':'gbdt',\n",
-        "    'learning_rate':0.1,\n",
-        "    'n_estimators':800,\n",
-        "    'reg_lambda':2)\n",
+        "lgb = LGBMRegressor(\n",
+        "    boosting_type = 'gbdt',\n",
+        "    learning_rate = 0.1,\n",
+        "    n_estimators = 800,\n",
+        "    reg_lambda = 2,\n",
+        "    )\n",
         "\n",
-        "gridsearch= GridSearchCV(lgb, \n",
+        "gridsearch = GridSearchCV(lgb, \n",
         "                         param_grid, \n",
-        "                         'rmse') # score to select parameters\n",
-        "gridsearch.fit(x, y)\n",
+        "                         'neg_mean_squared_error') # score to select parameters\n",
+        "gridsearch.fit(x_train, y_train,\n",
+        "               eval_set = (x_valid, y_valid),\n",
+        "               early_stopping_rounds = 200,\n",
+        "               eval_metric = 'mae',\n",
+        "               verbose = 200)\n",
         "print('Best parameters selected: \\n', gridsearch.best_params_)\n",
         "\n"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+            "  warnings.warn(CV_WARNING, FutureWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Training until validation scores don't improve for 200 rounds.\n",
+            "[200]\tvalid_0's l1: 0.860768\tvalid_0's l2: 1.65041\n",
+            "[400]\tvalid_0's l1: 0.743816\tvalid_0's l2: 1.31823\n",
+            "[600]\tvalid_0's l1: 0.681528\tvalid_0's l2: 1.15466\n",
+            "[800]\tvalid_0's l1: 0.640424\tvalid_0's l2: 1.05387\n",
+            "Did not meet early stopping. Best iteration is:\n",
+            "[800]\tvalid_0's l1: 0.640424\tvalid_0's l2: 1.05387\n",
+            "Training until validation scores don't improve for 200 rounds.\n",
+            "[200]\tvalid_0's l1: 0.859192\tvalid_0's l2: 1.63959\n",
+            "[400]\tvalid_0's l1: 0.740914\tvalid_0's l2: 1.30808\n",
+            "[600]\tvalid_0's l1: 0.677854\tvalid_0's l2: 1.14643\n",
+            "[800]\tvalid_0's l1: 0.638392\tvalid_0's l2: 1.05235\n",
+            "Did not meet early stopping. Best iteration is:\n",
+            "[800]\tvalid_0's l1: 0.638392\tvalid_0's l2: 1.05235\n",
+            "Training until validation scores don't improve for 200 rounds.\n",
+            "[200]\tvalid_0's l1: 0.860125\tvalid_0's l2: 1.64396\n",
+            "[400]\tvalid_0's l1: 0.738367\tvalid_0's l2: 1.30156\n",
+            "[600]\tvalid_0's l1: 0.678107\tvalid_0's l2: 1.1538\n",
+            "[800]\tvalid_0's l1: 0.640532\tvalid_0's l2: 1.05804\n",
+            "Did not meet early stopping. Best iteration is:\n",
+            "[800]\tvalid_0's l1: 0.640532\tvalid_0's l2: 1.05804\n",
+            "Training until validation scores don't improve for 200 rounds.\n",
+            "[200]\tvalid_0's l1: 0.860644\tvalid_0's l2: 1.64317\n",
+            "[400]\tvalid_0's l1: 0.740723\tvalid_0's l2: 1.30136\n",
+            "[600]\tvalid_0's l1: 0.675565\tvalid_0's l2: 1.1383\n",
+            "[800]\tvalid_0's l1: 0.637396\tvalid_0's l2: 1.04936\n",
+            "Did not meet early stopping. Best iteration is:\n",
+            "[800]\tvalid_0's l1: 0.637396\tvalid_0's l2: 1.04936\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
