--- a/FraudDetection.ipynb
+++ b/FraudDetection.ipynb
@@ -30,7 +30,11 @@
       "metadata": {
         "id": "Em3p8-SAQUKm",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 365
+        },
+        "outputId": "40943c85-dce0-4952-f2d2-ed341e098705"
       },
       "source": [
         "import numpy as np\n",
@@ -51,17 +55,45 @@
         "\n",
         "import os\n",
         "import gc\n",
-        "from time import time\n"
+        "from time import time\n",
+        "\n",
+        "!pip install catboost"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting catboost\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/97/c4/586923de4634f88a31fd1b4966e15707a912b98b6f4566651b5ef58f36b5/catboost-0.20.2-cp36-none-manylinux1_x86_64.whl (63.9MB)\n",
+            "\u001b[K     |████████████████████████████████| 63.9MB 47kB/s \n",
+            "\u001b[?25hRequirement already satisfied: graphviz in /usr/local/lib/python3.6/dist-packages (from catboost) (0.10.1)\n",
+            "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.6/dist-packages (from catboost) (0.25.3)\n",
+            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.6/dist-packages (from catboost) (1.17.4)\n",
+            "Requirement already satisfied: plotly in /usr/local/lib/python3.6/dist-packages (from catboost) (4.1.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from catboost) (1.12.0)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from catboost) (3.1.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from catboost) (1.3.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24.0->catboost) (2.6.1)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24.0->catboost) (2018.9)\n",
+            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly->catboost) (1.3.3)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (2.4.5)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (1.1.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (0.10.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib->catboost) (42.0.2)\n",
+            "Installing collected packages: catboost\n",
+            "Successfully installed catboost-0.20.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0E95RVSbTnmF",
         "colab_type": "code",
-        "outputId": "36ac7294-6b96-4b2c-8ca6-9e9eddc67439",
+        "outputId": "4e33bf34-823a-4f5b-9bd9-0411b05c1b6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
@@ -74,7 +106,7 @@
         "%cd /content/gdrive/\"My Drive\"\n",
         "!unzip ieee-fraud-detection.zip"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +129,7 @@
       "metadata": {
         "id": "FswJ2Wajvgsn",
         "colab_type": "code",
-        "outputId": "fda8f6ab-b324-4a53-bdc4-b6aa5c005895",
+        "outputId": "00a94954-5b89-4eea-9fe5-304b9cad8633",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -115,7 +147,7 @@
         "del train_action, test_action, train_id, test_id\n",
         "gc.collect()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +159,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -406,8 +438,10 @@
       "source": [
         "# Feature engineering\n",
         "\n",
-        "\n",
-        "\n",
+        "# For safety, replace infinite value in dataframe with nan\n",
+        "def remove_inf(df):\n",
+        "  return df.replace([np.inf, -np.inf], np.nan)\n",
+        "  \n",
         "def preprocessing(df_train, df_test):\n",
         "  '''\n",
         "  Feature engineering for dataframe.\n",
@@ -464,7 +498,6 @@
         "  #scaler = StandardScaler()\n",
         "  #df_x = scaler.fit_transform(df_x)\n",
         "\n",
-        "\n",
         "  return df_train, df_test"
       ],
       "execution_count": 0,
@@ -475,51 +508,170 @@
       "metadata": {
         "id": "aLTeWStx-ULn",
         "colab_type": "code",
-        "outputId": "7c8e5607-fca5-4591-fecc-74fcdbfefe23",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
-        }
+        "colab": {}
       },
       "source": [
-        "print(train.values == float('+inf'))"
+        "from catboost import CatBoostClassifier\n",
+        "from sklearn import metrics\n",
+        "from numba import jit\n",
+        "\n",
+        "# Compute roc_auc quickly\n",
+        "@jit # 將此function 變成jit的object, 即時編譯，使運算速度加快\n",
+        "def fast_auc(y_true, y_prob):\n",
+        "  y_true = np.array(y_true)\n",
+        "  y_true = y_true[np.argsort(y_prob)] #??\n",
+        "  n_false = 0\n",
+        "  auc = 0\n",
+        "  n = len(y_true)\n",
+        "  for i in range(n): # for each sample\n",
+        "    y_i = y_true[i]\n",
+        "    n_false += (1 - y_i)\n",
+        "    auc += y_i * n_false\n",
+        "  \n",
+        "  auc /= (n_false * (n - n_false))\n",
+        "  return auc\n",
+        "\n",
+        "\n",
+        "def eval_auc(y_true, y_pred):\n",
+        "  # Fast auc evaluation for lgb\n",
+        "  return 'auc', fast_auc(y_true, y_pred), True\n",
+        "\n",
+        "def train_model_classification(x, x_test, y, params, \n",
+        "                               folds, splits = None, n_folds = 3,\n",
+        "                               columns = None, \n",
+        "                               model_type = 'lgb', eval_metric = 'auc', model = None,\n",
+        "                               n_estimators = 50000, \n",
+        "                               verbose = 10000, early_stopping_rounds = 200,\n",
+        "                               ):\n",
+        "  '''\n",
+        "  Function to train variety of classification models.\n",
+        "  Return: out-of-fold predictions, test_prediction, score\n",
+        "  x: training data, dataframe or array, after normalization\n",
+        "  y: training target\n",
+        "  folds: folds to split data\n",
+        "  model_type: determine what model to use\n",
+        "  eval_metric: meric to use in this problem, applied for all the models\n",
+        "  columns: selected columns to use for training, if specified\n",
+        "  model: sklearn model\n",
+        "  n_estimators: number of boosters for boosting model\n",
+        "  '''\n",
+        "  columns = x.columns if columns is None else columns # If we don't give selected feature, then train columns is columns to use\n",
+        "  n_splits = folds.n_splits if splits is None else n_folds\n",
+        "  x_test = x_test[columns]\n",
+        "  # set up scoring parameters for different models\n",
+        "  model_metric = {\n",
+        "      'auc':{\n",
+        "          'lgb_metric':eval_auc,\n",
+        "          'catboost_metric':'AUC',\n",
+        "          'sklearn_scoring_function':roc_auc_score\n",
+        "      }\n",
+        "  }\n",
+        "\n",
+        "  result_dict = {}\n",
+        "  # out-of-hold prediction on train data\n",
+        "  oof = np.zeros((len(x), 1))\n",
+        "  prediction = np.zeros((len(x_test), 1)) # prediction on test data\n",
+        "\n",
+        "  # list of scores on folds\n",
+        "  score = [] # model's scoring performance for each fold data\n",
+        "  feature_importance = pd.DataFrame()\n",
+        "\n",
+        "  for fold_n, (train_id, valid_id) in enumerate(fold.split(x)):\n",
+        "     '''\n",
+        "     Train different model and: \n",
+        "     1. show performance for each fold  2. Predict for test set\n",
+        "     '''\n",
+        "     print(f'Fold {fold_n + 1} at time {time.ctime()}')\n",
+        "     x_train, x_valid = x.iloc[train_id], x.iloc[valid_id]\n",
+        "     y_train, y_valid = y.iloc[train_id], y.iloc[valid_id]\n",
+        "\n",
+        "     if model_type == 'lgb':\n",
+        "        model = LGBMClassifier(**params,\n",
+        "                              n_estimators = n_estimators,\n",
+        "                              n_jobs = -1)\n",
+        "    \n",
+        "        model.fit(x_train, y_train,\n",
+        "                  verbose = verbose,\n",
+        "                  early_stopping_rounds = early_stopping_rounds,\n",
+        "                  eval_set = [(x_valid, y_valid)],\n",
+        "                  eval_metric = model_metric[eval_metric]['lgb_metric'])\n",
+        "    \n",
+        "        y_valid_pred = model.predict_proba(x_valid)[:, 1] # predict probability for each valid sample\n",
+        "        y_pred = model.predict_proba(x_test, \n",
+        "                                     num_iteration = model.best_iteration_) # use optimize number of trees for prediction\n",
+        "\n",
+        "     if model_type == 'sklearn':\n",
+        "        model = model\n",
+        "        model.fit(x_train, y_train)\n",
+        "        y_valid_pred = model.predict(x_valid).reshape(-1,)\n",
+        "        score = model_metric[eval_metric]['sklearn_scoring_function'](y_valid, y_valid_pred)\n",
+        "        print(f'Fold {fold_n + 1} have {eval_metric} score: {score:.4f}')\n",
+        "        y_pred = model.predict_proba(x_test)\n",
+        "\n",
+        "     if model_type == 'cat':\n",
+        "        model = CatBoostClassifier(**params,\n",
+        "                                   iterations = n_estimators,\n",
+        "                                   eval_metric = model_metric[eval_metric]['catboost_metric'],\n",
+        "                                   loss_function = Logloss\n",
+        "                                   )\n",
+        "        \n",
+        "        model.fit(x_train, y_train, verbose = False,\n",
+        "                  eval_set = (x_valid, y_valid), cat_feature = [],\n",
+        "                  use_best_model = True,\n",
+        "                  )\n",
+        "        y_valid_pred = model.predict_proba(x_valid)\n",
+        "        y_pred = model.predict_proba(x_test)\n",
+        "\n",
+        "     oof[valid_id] = y_valid_pred.reshape(-1, 1) # size of all hold-out-set should be smaller than whole X\n",
+        "     score.append(model_metric[eval_metric]['sklearn_scoring_function'](y_valid, y_valid_pred))\n",
+        "     # Average over predictions on all hold-out-set\n",
+        "     prediction += y_pred.reshape((-1, 1))\n",
+        "\n",
+        "  prediction /= n_splits\n",
+        "  print('CV mean score: {0:.4f}, std: {1:.4f}'.format(np.mean(score), np.std(score)))\n",
+        "\n",
+        "  result_dict['oof'] = oof\n",
+        "  result_dict['score'] = score\n",
+        "  result_dict['prediction'] = prediction\n",
+        "\n",
+        "  return result_dict\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-0379b8f05617>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misinf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'isinf'"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SPioE5PYluMk",
         "colab_type": "code",
-        "outputId": "04f09196-0da5-46f6-801c-89e4632641d2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
-        }
+        "colab": {}
       },
       "source": [
-        "# Training\n",
+        "# Training:\n",
+        "# 1. Select the model, apply GridsearchCV to select the best parameters\n",
+        "# 2. Retrain the model with the best parameters\n",
+        "# 3. Make predictions on the test data\n",
         "train_data, test_data = preprocessing(train, test)\n",
         "x_train = train_data.sort_values['TransactionDT'].drop(['isFraud', 'TransactionID', 'TransactionDT'], axis = 1)\n",
         "y_train = train_data.sort_values['TransactionDT']['isFraud']\n",
         "x_test = test_data.drop(['TransactionID', 'TransactionDT'], axis = 1)\n",
         "del train, train_data\n",
         "\n",
-        "x_data, x_valid, y_data, y_valid = TimeSeriesSplit(x_train, y_train)\n",
-        "\n",
+        "x_data, x_valid, y_data, y_valid = TimeSeriesSplit(n_splits = 5)\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5gOkyKWVypxg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Logistic regression\n",
         "logit = LogisticRegression(\n",
         "    penalty= 'l2',\n",
         "    verbose = 50,\n",
@@ -531,20 +683,7 @@
         "gc.collect()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-57-0a5e85b7242b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtrain_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'isFraud'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'isFraud'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mx_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_valid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-56-8fcbccc7d019>\u001b[0m in \u001b[0;36mpreprocessing\u001b[0;34m(df_x, df_y)\u001b[0m\n\u001b[1;32m     35\u001b[0m   \u001b[0;31m# Data cleaning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m   \u001b[0;31m# fill missing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m   \u001b[0mdf_x\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrop_feature\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'drop'"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -568,7 +707,15 @@
         }
       },
       "source": [
-        "print(train_.head())"
+        "# Lightgbm\n",
+        "\n",
+        "parames = {\n",
+        "    'num_leaves':ㄓ\n",
+        "}\n",
+        "\n",
+        "metrics_dict = {\n",
+        "    'auc':{'lgbm_metric':eval_auc}\n",
+        "}"
       ],
       "execution_count": 0,
       "outputs": [
