--- a/Rossman_Store_Sales_Forecast.ipynb
+++ b/Rossman_Store_Sales_Forecast.ipynb
@@ -42,7 +42,7 @@
         "trusted": true,
         "id": "z-xcD87ulvvn",
         "colab_type": "code",
-        "outputId": "6c030446-79f1-4308-e5dc-e367e2243301",
+        "outputId": "a38d0d7e-a224-4873-9d5e-bbf620eaa550",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -51,6 +51,7 @@
       "source": [
         "import numpy as np # linear algebra\n",
         "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "import math\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -58,7 +59,8 @@
         "%tensorflow_version 1.9\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "import x\n",
+        "import lightgbm as lgb\n",
+        "import sklearn\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "import os\n",
@@ -68,7 +70,7 @@
         "warnings.simplefilter('ignore')\n",
         "      "
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +79,7 @@
             "You set: `1.9`. This will be interpreted as: `1.x`.\n",
             "\n",
             "\n",
-            "TensorFlow is already loaded. Please restart the runtime to change versions.\n"
+            "TensorFlow 1.x selected.\n"
           ],
           "name": "stdout"
         }
@@ -179,11 +181,7 @@
       "metadata": {
         "id": "vc8LLe6bnFqH",
         "colab_type": "code",
-        "outputId": "dc9e20b6-3b81-4d96-fa9b-009fdcfee5c7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 201
-        }
+        "colab": {}
       },
       "source": [
         "train = pd.read_csv('train.csv')\n",
@@ -191,17 +189,133 @@
         "store = pd.read_csv('store.csv')"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oADO7zQKsoKl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 276
+        },
+        "outputId": "11a7132b-d4f0-400c-f306-6ec86751eeb3"
+      },
+      "source": [
+        "print(train.info())"
+      ],
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-a8b71f1e354c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'train.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'test.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mstore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'store.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1017209 entries, 0 to 1017208\n",
+            "Data columns (total 9 columns):\n",
+            "Store            1017209 non-null int64\n",
+            "DayOfWeek        1017209 non-null int64\n",
+            "Date             1017209 non-null object\n",
+            "Sales            1017209 non-null int64\n",
+            "Customers        1017209 non-null int64\n",
+            "Open             1017209 non-null int64\n",
+            "Promo            1017209 non-null int64\n",
+            "StateHoliday     1017209 non-null object\n",
+            "SchoolHoliday    1017209 non-null int64\n",
+            "dtypes: int64(7), object(2)\n",
+            "memory usage: 69.8+ MB\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zgMgSGdJpu9N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 294
+        },
+        "outputId": "548f203c-c727-4fb3-cf0a-bd8b2cd92362"
+      },
+      "source": [
+        "print(store.info())"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1115 entries, 0 to 1114\n",
+            "Data columns (total 10 columns):\n",
+            "Store                        1115 non-null int64\n",
+            "StoreType                    1115 non-null object\n",
+            "Assortment                   1115 non-null object\n",
+            "CompetitionDistance          1112 non-null float64\n",
+            "CompetitionOpenSinceMonth    761 non-null float64\n",
+            "CompetitionOpenSinceYear     761 non-null float64\n",
+            "Promo2                       1115 non-null int64\n",
+            "Promo2SinceWeek              571 non-null float64\n",
+            "Promo2SinceYear              571 non-null float64\n",
+            "PromoInterval                571 non-null object\n",
+            "dtypes: float64(5), int64(2), object(3)\n",
+            "memory usage: 87.2+ KB\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vhb4rlMhs8Lu",
+        "colab_type": "text"
+      },
+      "source": [
+        "There are some data types in files that should be convert:  \n",
+        "object type, datetime features, and some features from float to int."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CS9p1GlBrrOc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 259
+        },
+        "outputId": "c2b58504-a9b8-4f8a-88c5-8cb2bd8382d4"
+      },
+      "source": [
+        "print(store)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   Store StoreType  ... Promo2SinceYear    PromoInterval\n",
+            "0      1         c  ...             NaN              NaN\n",
+            "1      2         a  ...          2010.0  Jan,Apr,Jul,Oct\n",
+            "2      3         a  ...          2011.0  Jan,Apr,Jul,Oct\n",
+            "3      4         c  ...             NaN              NaN\n",
+            "4      5         a  ...             NaN              NaN\n",
+            "\n",
+            "[5 rows x 10 columns]\n",
+            "0     9.0\n",
+            "1    11.0\n",
+            "2    12.0\n",
+            "3     9.0\n",
+            "4     4.0\n",
+            "Name: CompetitionOpenSinceMonth, dtype: float64\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -214,27 +328,17 @@
         "colab": {}
       },
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "types = {'CompetitionOpenSinceYear': np.dtype(int),\n",
-        "         'CompetitionOpenSinceMonth': np.dtype(int),\n",
+        "types = {'CompetitionOpenSinceYear': np.uint8,\n",
+        "         'CompetitionOpenSinceMonth': np.uint8,\n",
         "         'StateHoliday': np.dtype(str),\n",
         "         'Promo2SinceWeek': np.dtype(int),\n",
         "         'SchoolHoliday': np.dtype(float),\n",
         "         'PromoInterval': np.dtype(str)}\n",
-        "train = pd.read_csv(f\"{data}train.csv\", parse_dates=[2], dtype=types)\n",
-        "print(train.info())\n",
         "\n",
-        "'''\n",
-        "train_date = train.Date.unique()\n",
-        "print(train_date)\n",
-        "print('Time scan of dataset', len(train_date))\n",
+        "train = train.merge(store, on = 'Store')\n",
+        "test = test.merge(store, on = 'Store')\n",
         "\n",
-        "test_date = test.Date.unique()\n",
-        "print(test_date)\n",
-        "print('Time scan of test data', len(test_date))\n",
-        "'''"
+        "gc.collect()"
       ],
       "execution_count": 0,
       "outputs": []
