--- a/Ashrae_predict_FE.ipynb
+++ b/Ashrae_predict_FE.ipynb
@@ -31,10 +31,10 @@
       "metadata": {
         "id": "j9Vn9mfylThK",
         "colab_type": "code",
-        "outputId": "db27cb2f-2037-4afd-8b1b-cb584ee98b70",
+        "outputId": "6ee70e38-bcc4-440a-ca13-0c8f591a28d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 380
+          "height": 181
         }
       },
       "source": [
@@ -62,30 +62,19 @@
         "!gsutil -m cp -r gs://ashare_dataset/*.csv  sample_data/\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Updated property [core/project].\n",
-            "Copying gs://ashare_dataset/building_metadata.csv...\n",
             "Copying gs://ashare_dataset/sample_submission.csv...\n",
+            "Copying gs://ashare_dataset/building_metadata.csv...\n",
             "Copying gs://ashare_dataset/test.csv...\n",
-            "Copying gs://ashare_dataset/weather_test.csv...\n",
             "Copying gs://ashare_dataset/train.csv...\n",
+            "Copying gs://ashare_dataset/weather_test.csv...\n",
             "Copying gs://ashare_dataset/weather_train.csv...\n",
-            "Resuming download for sample_data/test.csv component 0\n",
-            "Resuming download for sample_data/sample_submission.csv component 2\n",
-            "Resuming download for sample_data/train.csv component 1\n",
-            "Resuming download for sample_data/test.csv component 1\n",
-            "Resuming download for sample_data/sample_submission.csv component 0\n",
-            "Resuming download for sample_data/train.csv component 0\n",
-            "Resuming download for sample_data/test.csv component 2\n",
-            "Resuming download for sample_data/sample_submission.csv component 1\n",
-            "Resuming download for sample_data/train.csv component 2\n",
-            "Resuming download for sample_data/test.csv component 3\n",
-            "Resuming download for sample_data/train.csv component 3\n",
-            "\\ [6/6 files][  2.4 GiB/  2.4 GiB] 100% Done  34.9 MiB/s ETA 00:00:00           \n",
+            "- [6/6 files][  2.4 GiB/  2.4 GiB] 100% Done  66.4 MiB/s ETA 00:00:00           \n",
             "Operation completed over 6 objects/2.4 GiB.                                      \n"
           ],
           "name": "stdout"
@@ -97,7 +86,7 @@
       "metadata": {
         "id": "xbKLd8hpOV4m",
         "colab_type": "code",
-        "outputId": "58c566db-4f71-48fa-d483-03163e39d810",
+        "outputId": "d15cacbc-f386-4535-f5cb-409e93f15f1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 328
@@ -172,7 +161,7 @@
         "test = reduce_mem_usage(test)\n",
         "weather_test = reduce_mem_usage(weather_test)\n"
       ],
-      "execution_count": 34,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +206,7 @@
       "metadata": {
         "id": "CXBxv4GcLzxQ",
         "colab_type": "code",
-        "outputId": "cc5cf13f-066b-4fb6-b1af-aeda3d376c6f",
+        "outputId": "9c31c725-186f-4c6b-ae32-d4fd8e252336",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
@@ -232,7 +221,7 @@
         "print('Missing values in weather train data after interpolation: \\n')\n",
         "print(weather_train.isnull().sum().sort_values(ascending = False))"
       ],
-      "execution_count": 35,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +279,11 @@
       "metadata": {
         "id": "mCgTu8IyPwON",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "4302bdbb-f0ed-45fb-8dbc-9e928108ac43",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 334
+        }
       },
       "source": [
         "# After the timestamp alignment, new columns 'offset' may generate whole row that is NaN. Drop these rows\n",
@@ -300,19 +293,28 @@
         "               'precip_depth_1_hr', 'cloud_coverage']\n",
         "train = train.dropna(subset = weather_col, how = 'all')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-48-968b76dc84bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m weather_col = ['air_temperature', 'dew_temperature', 'wind_speed',                'wind_direction', 'offset', 'sea_level_pressure',\n\u001b[1;32m      2\u001b[0m                'precip_depth_1_hr', 'cloud_coverage']\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mweather_col\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'all'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdropna\u001b[0;34m(self, axis, how, thresh, subset, inplace)\u001b[0m\n\u001b[1;32m   4857\u001b[0m                 \u001b[0mcheck\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindices\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4858\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mcheck\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4859\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompress\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4860\u001b[0m                 \u001b[0magg_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0magg_axis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4861\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: ['offset']"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "smTxW2hYVxM5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 108
-        },
-        "outputId": "e40ad1ee-99e1-4fbc-8a7d-7136d317314e"
+        "colab": {}
       },
       "source": [
         "# Fill NaNs\n",
@@ -334,33 +336,18 @@
         "   else:\n",
         "     train[col].fillna(null_col_mean[col], inplace = True)\n",
         "     test[col].fillna(null_col_mean[col], inplace = True)\n",
+        "\n",
         "\n"
       ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas/core/generic.py:6287: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  self._update_inplace(new_data)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "a6RxctSDrOO3",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 562
-        },
-        "outputId": "bb5d011a-767a-4a82-f8a9-7d99a9ec0c91"
+        "colab": {}
       },
       "source": [
         "# Create new feature: feature generation\n",
@@ -377,45 +364,8 @@
         "train = time_transform(train)\n",
         "test = time_transform(test)\n"
       ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  after removing the cwd from sys.path.\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"\n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n",
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  import sys\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -482,11 +432,7 @@
       },
       "source": [
         "# Data cleaning: drop useless features and samples\n",
-        "train.corr()['meter_reading'].plot()\n",
-        "\n",
-        "drop_features = ['wind_speed', 'sea_level_pressure']\n",
-        "\n",
-        "gc.collect()"
+        "print(train.columns)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -501,28 +447,105 @@
       "source": [
         "# Feature engineering\n",
         "\n",
+        "le.fit(list(train['primary_use'].unique()) + list(test['primary_use'].unique()))\n",
+        "\n",
+        "def time_transform(df):\n",
+        "  df['hour'] = df['timestamp'].dt.hour\n",
+        "  df['year'] = df['timestamp'].dt.year\n",
+        "  df['month'] = df.timestamp.dt.month\n",
+        "  df['day'] = df.timestamp.dt.day\n",
+        "  df['dayofweek'] = df.timestamp.dt.dayofweek\n",
+        "  \n",
+        "  return df\n",
+        "\n",
+        "# Encode cyclic features\n",
+        "def encode_cyclic_feature(df, col, max_val):\n",
+        "  '''\n",
+        "  Encode cyclic feature with sin cosine transform\n",
+        "  df: dataframe contains cyclic feature\n",
+        "  col: cylcic features to transform\n",
+        "  max_val: max value for that cyclic column\n",
+        "  '''\n",
+        "  df[col + '_sin'] = np.sin(2*np.pi*(df[col]/max_val))\n",
+        "  del df[col]\n",
+        "  return df\n",
+        "\n",
         "def preprocessing(df, building, weather, is_train = False):\n",
         "  '''\n",
         "  df: train data or test dataframe\n",
         "  '''\n",
         "\n",
-        "  # 1. Log transformation for training target\n",
+        "  # 0. Combine the dataset into one\n",
+        "  df = df.merge(building, on = 'building_id', how = 'left')\n",
+        "  df = df.merge(weather, on = ['site_id', 'timestamp'], how = 'left')\n",
+        "\n",
+        "  weather_col = ['air_temperature', 'dew_temperature', 'wind_speed', \\\n",
+        "               'wind_direction', 'sea_level_pressure',\n",
+        "               'precip_depth_1_hr', 'cloud_coverage']\n",
+        "  df = df.dropna(subset = weather_col, how = 'all')\n",
+        "\n",
+        "  # 1. Create new features\n",
+        "  df = time_transform(df)\n",
+        "  \n",
+        " \n",
+        "  # 2. Data transformation to make data better for prediction\n",
+        "  # Log transformation for numerical data\n",
         "  if is_train:\n",
         "    df['meter_reading'] = np.log1p(df['meter_reading'])\n",
         "  \n",
         "  df['square_feet'] = np.log1p(df['square_feet'])\n",
         "\n",
-        "  # 2. Fill NaNs\n",
+        "  # Encode cyclic features\n",
+        "  df = encode_cyclic_feature(df, 'dayofweek', 7)\n",
+        "  df = encode_cyclic_feature(df, 'hour', 24)\n",
+        "  df = encode_cyclic_feature(df, 'day', 31)\n",
+        "  df = encode_cyclic_feature(df, 'month', 31)\n",
         "  \n",
         "\n",
-        "  # 3. Categorical encoding\n",
+        "  # 3. Fill NaNs\n",
         "\n",
-        "  # 4. Data cleaning: NaN rows, Outliers, ...etc\n",
+        "  \n",
         "\n",
+        "  # 4. Categorical encoding\n",
+        "  df['primary_use'] = le.transform(df['primary_use'])\n",
         "\n",
-        "\n",
+        "  # 5. Data cleaning: NaN rows, Outliers, ...etc\n",
+        "  drop_features = ['wind_speed', 'sea_level_pressure', 'wind_direction', 'timestamp']\n",
+        "  df.drop(drop_features, axis = 1, inplace = True)\n",
         "\n",
         "  return df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TnMVmJvdFQ56",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train = preprocessing(train, building, weather_train, is_train = True)\n",
+        "test = preprocessing(test, building, weather_test, is_train = False)\n",
+        "\n",
+        "\n",
+        "\n",
+        "del building, weather_train, weather_test"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ccRe5dT_Pl-i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train.to_csv('train_processed.csv', index = False)\n",
+        "test.to_csv('test_processed.csv', index = False)"
       ],
       "execution_count": 0,
       "outputs": []
