--- a/Ashrae_predict_FE.ipynb
+++ b/Ashrae_predict_FE.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "j9Vn9mfylThK",
         "colab_type": "code",
-        "outputId": "04a370c5-b5c0-4e38-a252-bd9d28b28f43",
+        "outputId": "df3d27ac-4c16-433a-97aa-31c7ecab3946",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 181
@@ -62,7 +62,7 @@
         "!gsutil -m cp -r gs://ashare_dataset/*.csv  sample_data/\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,7 +74,7 @@
             "Copying gs://ashare_dataset/train.csv...\n",
             "Copying gs://ashare_dataset/weather_test.csv...\n",
             "Copying gs://ashare_dataset/weather_train.csv...\n",
-            "| [6/6 files][  2.4 GiB/  2.4 GiB] 100% Done  55.4 MiB/s ETA 00:00:00           \n",
+            "- [6/6 files][  2.4 GiB/  2.4 GiB] 100% Done  58.6 MiB/s ETA 00:00:00           \n",
             "Operation completed over 6 objects/2.4 GiB.                                      \n"
           ],
           "name": "stdout"
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "xbKLd8hpOV4m",
         "colab_type": "code",
-        "outputId": "a54cde38-ff38-41da-c6b9-83c71ebba72e",
+        "outputId": "0c93052f-081f-445b-8e11-ab89e96e70bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 328
@@ -161,7 +161,7 @@
         "test = reduce_mem_usage(test)\n",
         "weather_test = reduce_mem_usage(weather_test)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "CXBxv4GcLzxQ",
         "colab_type": "code",
-        "outputId": "b3144620-d465-4069-8dae-b5b3eedf0c78",
+        "outputId": "3da68802-c19b-44c3-f635-dbbc8d511ec5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 271
@@ -311,7 +311,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "f529000c-35d8-4a68-c250-b01e91057018"
+        "outputId": "64ec311d-dc55-46f5-e135-2a1910373658"
       },
       "source": [
         "# Functions for several preprocessing and feature engineering\n",
@@ -398,12 +398,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "b4648640-9fcd-4644-e5f2-0871de67feca"
+        "outputId": "84b37be5-b8c7-42e1-ac78-9792ac7ca943"
       },
       "source": [
         "print(train.columns)"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +501,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 962
         },
-        "outputId": "99e77aaa-420b-4b9c-e8df-68f31bf1c111"
+        "outputId": "19ebcd4b-885e-4918-a553-ca81c80c2098"
       },
       "source": [
         "print('Train data shape: ', train.shape)\n",
@@ -509,7 +509,7 @@
         "print('Test data shape: ', test.shape)\n",
         "print(test.info())"
       ],
-      "execution_count": 31,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +590,11 @@
       "metadata": {
         "id": "OGXJVCKdhtfP",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 344
+        },
+        "outputId": "680d98b9-a213-4ea3-b85b-b3fbf68bbb77"
       },
       "source": [
         "!git init\n",
@@ -598,12 +602,42 @@
         "!git config --global user.name \"laurence-lin\"\n",
         "!git add 'train_processed.csv'\n",
         "!git commit -m 'upload preprocessed train.csv file'\n",
-        "!git remote add origin\n",
+        "!git remote add origin git@github.com:laurence-lin/Kaggle_competition.git\n",
         "\n",
-        "!git push ''"
+        "!git push origin master\n",
+        "\n",
+        "!git add 'test_processed.csv'\n",
+        "!git commit -m 'upload preprocessed test.csv file'\n",
+        "!git remote add origin git@github.com:laurence-lin/Kaggle_competition.git\n",
+        "!git push origin master"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n",
+            "[master (root-commit) c3b72b6] upload preprocessed train.csv file\n",
+            " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
+            " create mode 100644 train_processed.csv\n",
+            "Host key verification failed.\n",
+            "fatal: Could not read from remote repository.\n",
+            "\n",
+            "Please make sure you have the correct access rights\n",
+            "and the repository exists.\n",
+            "[master 4283710] upload preprocessed test.csv file\n",
+            " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
+            " create mode 100644 test_processed.csv\n",
+            "fatal: remote origin already exists.\n",
+            "Host key verification failed.\n",
+            "fatal: Could not read from remote repository.\n",
+            "\n",
+            "Please make sure you have the correct access rights\n",
+            "and the repository exists.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
